content/panorama/layout/custom_game/common/patreon/patreon.css
/* ... */
.MinimapExtraLarge #PatreonButton {
	width: 280px;
}

#PatreonButton:hover {
  box-shadow: #000000ff 0px 0px 16px 0px;
  background-color: gradient( linear, 0% 0%, 0% 100%, from( #052d49 ), to( #052d49 ) );
}

#PatreonButton Label {
	color: white;
	font-size: 26px;
	text-transform: uppercase;
	margin-top: 5px;
	horizontal-align: center;
	text-overflow: shrink;
}

#PatreonButtonSmallerImage {
	width: 70px;
	height: 60px;
	margin-left: -5px;
	padding: 4px 12px 4px 12px;
	background-color: gradient( linear, 0% 0%, 0% 100%, from( #052d49 ), to( #052d49 ) );
	background-size: 100%;
	background-repeat: no-repeat;
	border-style: solid;
	border-width: 1px;
	border-color: #052d49;
	border-radius: 5px;
}

 #PatreonButtonSmallerImage:hover
{
  background-color: gradient( linear, 0% 0%, 0% 100%, from( #074570 ), to( #074570 ) );
}

#VOIcon
{
	height: 60px;
	width: 60px;
	margin-bottom: 60px;
}

.HUDFlipped #VOIcon {
	horizontal-align: right;
}

#PaymentWindow {
	align: center center;
	margin-bottom: 110px;
	width: 450px;
	flow-children: down;
	background-color: #444;
	border-radius: 3px;
	padding-bottom: 10px;
}

#PaymentWindowBody,
#PaymentWindowLoader,
#PaymentWindowError {
	width: 100%;
	height: 500px;
	margin-bottom: 15px;
}

#PaymentWindowBody > HTML {
	width: 100%;
	height: 100%;
}

#PaymentWindowLoader > Panel {
	align: center center;
}

#PaymentWindowErrorMessage {
	align: center center;
	text-align: center;
	color: white;
	font-size: 24px;
}

#PaymentWindowPaymentKinds,
#PaymentWindowProviders {
	flow-children: right;
	horizontal-align: center;
}

#PaymentWindowPaymentKinds > RadioButton,
#PaymentWindowProviders > RadioButton {
	margin: 0 5px;
}

#PaymentWindowPaymentKinds {
	margin-top: 5px;
}

#PaymentWindowProviders > RadioButton > .RadioBox {
	visibility: collapse;
}

#PaymentWindowProviders > RadioButton > Image {
	height: 60px;
	width: 157px;
	padding: 4px;
	background-color: white;
	border-radius: 8px;
	border: 3px solid transparent;
}

#PaymentWindowProviders > RadioButton:selected > Image {
	border: 3px solid rgb(0, 217, 255);
}

#NewMethodsAnnouncement {
	flow-children: right;
	margin-left: 70px;
	margin-bottom: 10px;
}

#NewMethodsAnnouncement > AnimatedImageStrip {
	width: height-percentage(100%);
	height: 90px;
	margin-left: -15px;
	margin-right: -10px;
}

#NewMethodsAnnouncementText {
	width: 235px;
	flow-children: down;
}

#NewMethodsAnnouncementText > Label {
	width: 100%;
	font-size: 24px;
	white-space: nowrap;
	text-overflow: shrink;
	color: white;
}

#NewMethodsAnnouncementImages {
	margin-top: 5px;
	flow-children: right;
}

#NewMethodsAnnouncementImages > Image {
	background-color: white;
	width: 100px;
	height: 40px;
	margin: 0 7px;
	border-radius: 8px;
	padding: 2px;
}

#NewMethodsAnnouncementImages > Image:hover {
	pre-transform-scale2d: 0.98;
}

#NewMethodsAnnouncementImages > Image:active {
	pre-transform-scale2d: 1.02;
}

